--- a/visualization2.ipynb
+++ b/visualization2.ipynb
@@ -12,7 +12,17 @@
     " \n",
     "file = r'data/Presidents.xls'\n",
     "df = pd.read_excel(file)\n",
-    " \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# plot data\n",
     "colors = ['yellowgreen', 'gold', 'lightskyblue', 'lightcoral','red','green','blue','orange','white','brown']\n",
     "df['Occupation'].value_counts().plot(kind='pie',title='Occupation by President',colors=colors)\n",
@@ -26,16 +36,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "df = df[df['% popular'] != 'NA()']\n",
+    "df['% popular'].plot(kind='hist', bins=8, title='Popularity by President', facecolor='blue', alpha=0.5, normed=1)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
